# stripe-inspector

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  passenger_wsgi.py  pyproject.toml
stripe_inspector/: __init__.py  cli.py  core.py  export.py  report.py
stripe_inspector/modules/: _base.py  balance_transactions.py  charges.py  connected.py  coupons.py  customers.py  disputes.py  events.py  invoices.py  payment_intents.py  payouts.py  products.py  refunds.py  subscriptions.py
stripe_inspector/web/: app.py
stripe_inspector/web/static/: app.js  index.html  style.css
stripe_inspector/web/templates/: report.html  report_pdf.html
