[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stripe-inspector"
dynamic = ["version"]
description = "Security research tool to enumerate and inspect Stripe API keys"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ijaz Ur Rahim", email = "ijazkhan095@gmail.com"},
]
keywords = ["stripe", "security", "osint", "api-key", "inspector", "recon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]

[project.urls]
Homepage = "https://github.com/mrdebugger/stripe-inspector"
Repository = "https://github.com/mrdebugger/stripe-inspector"
Issues = "https://github.com/mrdebugger/stripe-inspector/issues"

[project.scripts]
stripe-inspector = "stripe_inspector.cli:app"

[tool.setuptools.dynamic]
version = {attr = "stripe_inspector.__version__"}

[tool.setuptools.packages.find]
include = ["stripe_inspector*"]

[tool.setuptools.package-data]
stripe_inspector = ["web/static/*", "web/templates/*"]
